--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,10 +6,11 @@ spring.datasource.password=root
 server.port=8085
 
 
-#springdoc.swagger-ui.enabled=true
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
 
 #springdoc.swagger-ui.path=/my-documentation
 #springdoc.api-docs.path=/my-api-docs
 
-#springdoc.packages-to-scan=com.example.demo.controller.controller
-#springdoc.swagger-ui.tryItOutEnabled=true
+springdoc.packages-to-scan=com.example.demo.controller.controller
+springdoc.swagger-ui.tryItOutEnabled=true
